# flarejax

./: .gitignore  .readthedocs.yml  README.md  asdict.py  deref.py  falt_dict.py  flat.py  flat2.py  jitt.py  main.py  mod.py  mod2.py  module.py  pyproject.toml  requirements.txt  setup.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  tima.py  tmp3.py
deprecated/: jitt.py
deprecated/flarejax/: __init__.py  _frozen.py  _serial.py  _utils.py
docs/: requirements.txt
docs/source/: How it works.rst  New Modules.rst  New Optimizers.rst  conf.py  flarejax.rst  index.rst  net.rst  new_modules.rst  new_optimizers.rst  opt.rst  pytrees_refs.rst  serialize.rst  tmp.ipynb
docs/source/_static/: custom.css
flarejax/: __init__.py  _attention.py  _combine.py  _config.py  _filter.py  _frozen.py  _layers.py  _linear.py  _lookup.py  _modify.py  _module.py  _mtypes.py  _norm.py  _opt.py  _param.py  _pytree.py  _rng.py  _serial.py  _tcheck.py  _transform.py  _trees.py  _typecheck.py  _utils.py
flarejax _isleaf/: __init__.py  _frozen.py  _module.py
flarejax/flr/: _filter.py  _lookup.py  _module.py  _tcheck.py
flarejax/net/: __init__.py  _attention.py  _combine.py  _einops.py  _linear.py  _norm.py  _transform.py
flarejax/opt/: __init__.py  _adam.py  _opt.py  _schedule.py  _sgd.py
flarejax_isleaf/: _module.py  _treemanip.py
flarejax_strict/: __init__.py  _config.py  _frozen.py  _module.py  _mtypes.py
