[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noxjax"
version = "0.4.0"
description = "Flexible Neural Networks in JAX"
readme = "README.md"
authors = [
    { name = "Paul Wollenhaupt", email = "paul.wollenhaupt@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.4.33",
    "jaxlib>=0.4.33",
    "jaxtyping==0.2.34",
    "beartype==0.18.5"
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/pwolle/flarejax"
